<?xml version="1.0"?>
<package>
  <name>v4r</name>
  <version>1.0.0</version>
  <description>The Vision for Robotics Library of ACIN TUW (open source STRANDS version)</description>

  <maintainer email="faeulhammer@acin.tuwien.ac.at">Thomas Fäulhammer</maintainer>
  <maintainer email="aldoma@acin.tuwien.ac.at">Aitor Aldoma</maintainer>
  <maintainer email="zillich@acin.tuwien.ac.at">Michael Zillich</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">https://github.com/strands-project/v4r</url> 


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>suitesparse</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libopenni-dev</build_depend>
  <build_depend>atlas</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>atlas</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <export>
	<build_type>cmake</build_type>
  </export>
</package>
